WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136249
[GTK] Translations are not initialized in the UI process
https://bugs.webkit.org/show_bug.cgi?id=136249
Summary
[GTK] Translations are not initialized in the UI process
Carlos Garcia Campos
Reported
2014-08-26 04:35:28 PDT
This is breaking things like webkitContextMenuActionGetForContextMenuItem() for non English locales in the cases where we use the action title to guess the action, because the action title we get from the web process is translated while the one in the UI process is in English. We should initialize gettext also in the Ui process.
Attachments
Patch
(2.01 KB, patch)
2014-08-26 04:38 PDT
,
Carlos Garcia Campos
pnormand
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2014-08-26 04:38:09 PDT
Created
attachment 237146
[details]
Patch
WebKit Commit Bot
Comment 2
2014-08-26 04:39:39 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Philippe Normand
Comment 3
2014-08-26 04:48:33 PDT
Comment on
attachment 237146
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=237146&action=review
> Source/WebKit2/UIProcess/API/gtk/WebKitWebContext.cpp:254 > + // Initialize gettext here, right before creating the default web context.
Not sure this comment has any relevant info. The explanation in the Changelog would be enough for me :)
Carlos Garcia Campos
Comment 4
2014-08-26 04:55:21 PDT
Committed
r172957
: <
http://trac.webkit.org/changeset/172957
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug