[GTK] Translations are not initialized in the UI process https://bugs.webkit.org/show_bug.cgi?id=136249

Reviewed by Philippe Normand.

This is breaking things like webkitContextMenuActionGetForContextMenuItem()
for non English locales in the cases where we use the action title to guess the
action, because the action title we get from the web process is translated while
the one in the UI process is in English.

* UIProcess/API/gtk/WebKitWebContext.cpp:
(createDefaultWebContext): Initialize gettext right before
creating the default web context.

Canonical link: https://commits.webkit.org/154070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172957 268f45cc-cd09-0410-ab3c-d52691b4dbfc